# pjx

./: .gitignore  .gitmodules  .rumdl.toml  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  TODO.md  idea.md  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
demo/: README.md  pyproject.toml
demo/app/: api.py  views.py
demo/app/templates/components/: ConfirmModal.jinja  UserCard.jinja
demo/app/templates/icons/: IconEdit.jinja  IconUser.jinja
demo/app/templates/layouts/: BaseLayout.jinja
demo/app/templates/pages/: home.jinja
demo/app/templates/pages/users/: [id].jinja
demo/app/templates/partials/: edit_modal.jinja  user_card.jinja
docs/: IDEA.md  PLAN.md  PRD.md  README.md  SDD.md  SECURITY.md  SPEC.md  SSD.md  architecture.md  cli.md  decisions.md  template-language.md
docs/dev/: IDEA.md  PLAN.md  SPEC.md
docs/wiki/: CLI-Reference.md  CSS-and-Assets.md  Compilation-Reference.md  Component-Syntax.md  Configuration-Reference.md  Control-Flow.md  Deployment.md  FastAPI-Integration.md  File-Based-Routing.md  HTMX-Integration.md  Home.md  Imports-and-Composition.md  Installation.md  Layout-Components.md  Layouts-and-Inheritance.md  Loading-States.md  Middleware.md  Project-Structure.md  Props-and-Validation.md  Quick-Start.md  SSE-and-Realtime.md  Security.md  Slots.md  State-and-Reactivity.md  Template-Engines.md  Troubleshooting.md  _Footer.md  _Sidebar.md
examples/: app.py  pjx.toml
examples/demo/: package-lock.json  package.json  pjx.toml
exemples/: README.md  __init__.py  catalog.py  data.py  main.py  state.py
exemples/api/: __init__.py
exemples/directives/: tooltip.py
exemples/layouts/: AppLayout.jinja
exemples/pages/: dashboard.jinja  signals_counter.jinja  status_overview.jinja  studio.jinja
markupsafe/: __init__.py
pjx/: __init__.py  __main__.py  assets.py  ast.py  bench.py  catalog.py  cli.py  compile.py  compiler.py  directives.py  environment.py  errors.py  exceptions.py  fastapi.py  markup.py  models.py  parser.py  router.py  runtime.py  runtime_minijinja.py  tooling.py  web.py
pjx/core/: __init__.py  aliases.py  components.py  expressions.py  flow.py  frontmatter.py  pipeline.py  scanner.py
skills/pjx/: SKILL.md
src/pjx/: README.md  __init__.py  __main__.py  assets.py  ast_nodes.py  cache.py  caching.py  checker.py  compilation.py  compiler.py  config.py  css.py  engine.py  errors.py  formatter.py  handler.py  health.py  integration.py  layout.py  lexer.py  log.py  parser.py  props.py  pyproject.toml  registry.py  router.py  seo.py  setup.py  slots.py  sse.py  static.py  streaming.py  typegen.py
src/pjx-htmx/: README.md  pyproject.toml
src/pjx-htmx/pjx_htmx/: __init__.py  assets.py  extension.py  processor.py
src/pjx-htmx/tests/: test_htmx_processor.py
src/pjx-stimulus/: README.md  pyproject.toml
src/pjx-stimulus/pjx_stimulus/: __init__.py  assets.py  extension.py  processor.py
src/pjx-stimulus/tests/: test_stimulus_processor.py
src/pjx-tailwind/: README.md  pyproject.toml
src/pjx-tailwind/pjx_tailwind/: __init__.py  assets.py  cn.py  extension.py  setup.py
src/pjx-tailwind/tests/: test_cn.py
src/pjx/cli/: __init__.py  analyze.py  build.py  common.py  demo.py  dev.py  init.py  inject.py  packages.py
src/pjx/middleware/: __init__.py  csrf.py
src/pjx/pjx/: __init__.py  assets.py  cache.py  checker.py  cli.py  environment.py  errors.py  extension.py  formatter.py  models.py  router.py  seo.py
src/pjx/pjx/_bundled/demo/app/: deps.py  main.py  models.py  service.py  views.py
src/pjx/pjx/_bundled/demo/app/static/css/: index.css
src/pjx/pjx/_bundled/demo/app/static/js/: index.js
src/pjx/pjx/_bundled/demo/app/templates/components/: UserCard.jinja
src/pjx/pjx/_bundled/demo/app/templates/icons/: IconPlus.jinja  IconTrash.jinja  IconX.jinja
src/pjx/pjx/_bundled/demo/app/templates/layouts/: BaseLayout.jinja
src/pjx/pjx/_bundled/demo/app/templates/pages/: 404.jinja  500.jinja
src/pjx/pjx/_bundled/demo/app/templates/partials/: form_error.jinja  user_card.jinja
src/pjx/pjx/_bundled/skills/pjx/: SKILL.md
src/pjx/pjx/_bundled/skills/pjx/references/: cli.md  router.md  structure.md  syntax.md
src/pjx/pjx/core/: __init__.py  attrs.py  components.py  expressions.py  flow.py  frontmatter.py  pipeline.py  scanner.py  tag_utils.py  types.py  vars.py
src/pjx/tests/: conftest.py  test_assets.py  test_cache.py  test_checker.py  test_cli.py  test_extension.py  test_formatter.py  test_path_traversal.py  test_seo.py
src/pjx/tests/fastapi/: test_decorators.py
src/pjx/tests/fixtures/expressions/: expected.jinja  input.jinja
src/pjx/tests/fixtures/fastapi_templates/: error.jinja  fragment.jinja  home.jinja  stream_item.jinja  success.jinja
src/pjx/tests/fixtures/for_loop/: expected.jinja  input.jinja
src/pjx/tests/fixtures/frontmatter/: expected.jinja
src/pjx/tests/fixtures/htmx_aliases/: expected.jinja  input.jinja
src/pjx/tests/fixtures/show_else/: expected.jinja
src/pjx/tests/fixtures/stimulus_aliases/: expected.jinja  input.jinja
src/pjx/tests/fixtures/switch/: expected.jinja  input.jinja
src/pjx/tests/preprocessor/: test_attrs.py  test_components.py  test_control_flow.py  test_fragment.py  test_frontmatter.py  test_pipeline.py  test_pipeline_new_features.py  test_scanner.py  test_vars.py
src/pjx/ui/layouts/: AspectRatio.jinja  Divider.jinja  Wrap.jinja
tests/: conftest.py  test_catalog.py  test_cli.py  test_compiler.py  test_fastapi_app.py  test_parser.py  test_pjx_api.py  test_runtime.py
tests/benchmark/: test_engine_benchmark.py
tests/e2e/: test_full_render.py  test_real_components.py
tests/fastapi/: test_decorators.py
tests/integration/: test_actions.py  test_caching.py  test_cli.py  test_htmx_endpoints.py  test_integration.py  test_session.py  test_sse.py
tests/preprocessor/: test_aliases.py  test_components.py  test_expressions.py  test_frontmatter.py  test_pipeline.py
tests/unit/: test_actions.py  test_analyze.py  test_assets.py  test_ast_nodes.py  test_cache.py  test_caching.py  test_checker.py  test_compiler.py  test_css.py  (+21 more)
(+160 files in other folders)
