[project]
keywords = [
    "jinja",
    "htmx",
    "alpine",
    "components",
    "fastapi",
    "ssr",
    "dsl",
    "python",
    "web",
]
name = "pjx"
version = "0.1.2"
description = "Python DSL for reactive Jinja components — compiles to Jinja2 + HTMX + Alpine.js"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Fabio Souza", email = "fabiohcsouza@outlook.com.br" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.135.2",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.22",
    "rich>=14.3.3",
    "sse-starlette>=3.3.3",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.42.0",
]

[project.optional-dependencies]
fast = ["minijinja>=2.18.0"]

[project.urls]
Homepage = "https://github.com/oornnery/pjx"
Documentation = "https://github.com/oornnery/pjx/wiki"
Repository = "https://github.com/oornnery/pjx"
Issues = "https://github.com/oornnery/pjx/issues"

[dependency-groups]
dev = ["ruff>=0.15.7", "rumdl>=0.1.60", "taskipy>=1.14.1", "ty>=0.0.25"]
test = [
    "httpx>=0.28.1",
    "slowapi>=0.1.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
    "slow: long-running tests",
    "integration: integration-level tests",
    "e2e: end-to-end flow tests",
    "benchmark: performance benchmark tests",
]

[project.scripts]
pjx = "pjx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pjx"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "pjx/skills"
"examples" = "pjx/examples"

[tool.hatch.build.targets.sdist]
exclude = [".claude", ".venv", "dist", "tests"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check . --fix"
check = "ruff format --check . && ruff check . && rumdl check ."
typecheck = "ty check"
test = "pytest -v --ignore=tests/benchmark"
cov = "pytest --cov --cov-report=term-missing --ignore=tests/benchmark"
ci = "task check && task typecheck && task test"

[tool.uv.workspace]
members = ["examples/demo", "examples/demo2"]
