[project]
name = "demo"
version = "0.2.0"
description = "PJX Demo — CRUD with HTMX + Stimulus + Tailwind features"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "pjx[all]",
    "uvicorn[standard]>=0.43.0",
]

[tool.uv.sources]
pjx = { workspace = true, editable = true }
pjx-htmx = { workspace = true, editable = true }
pjx-stimulus = { workspace = true, editable = true }
pjx-tailwind = { workspace = true, editable = true }
