[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pjx-htmx"
version = "0.1.0"
description = "HTMX and SSE alias processor for PJX"
requires-python = ">=3.12"
dependencies = ["pjx>=0.2.0"]

[project.entry-points."pjx.processors"]
htmx = "pjx_htmx:HTMXAliasProcessor"

[tool.uv.sources]
pjx = { workspace = true, editable = true }
