[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pjx-stimulus"
version = "0.1.0"
description = "Stimulus alias processor for PJX"
requires-python = ">=3.12"
dependencies = ["pjx>=0.2.0"]

[project.entry-points."pjx.processors"]
stimulus = "pjx_stimulus:StimulusAliasProcessor"

[tool.uv.sources]
pjx = { workspace = true, editable = true }
