[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pjx-stimulus"
version = "0.1.1"
description = "Stimulus alias processor for PJX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pjx>=0.2.1"]

[project.urls]
Homepage = "https://github.com/oornnery/pjx"
Repository = "https://github.com/oornnery/pjx"
Issues = "https://github.com/oornnery/pjx/issues"

[project.entry-points."pjx.extensions"]
stimulus = "pjx_stimulus.extension:StimulusExtension"

[tool.uv.sources]
pjx = { workspace = true, editable = true }
