[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pjx-tailwind"
version = "0.1.0"
description = "Tailwind CSS utilities for PJX (cn() class merging)"
requires-python = ">=3.12"
dependencies = ["pjx>=0.2.0"]

[project.entry-points."pjx.jinja_globals"]
cn = "pjx_tailwind.cn:cn"

[tool.uv.sources]
pjx = { workspace = true, editable = true }
